--- a/demo/src/index.css
+++ b/demo/src/index.css
@@ -1,4 +1,11 @@
+* {
+  /*outline: 5px solid red;*/
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
 .buttonsContainer {
-  display: flex;
-  flex-direction: column;
 }
